# file-curator

./: .buildinfo  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  fw_gear_file_curator.html  genindex.html  index.html  manifest.json  modules.html  objects.inv  parser.py  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  search.html  searchindex.js  usage.html
.github/workflows/: docs.yaml
_modules/: index.html
_modules/fw_gear_file_curator/: parser.html
_sources/: usage.rst.txt
docs/: release_notes.md
docs/source/: conf.py  fw_gear_file_curator.rst  index.rst
examples/: Makefile  complete_test.py  form-and-annotation-merger-GR.py  jitter_weight.py  launch_qc.py  rename-file.py  shim-emails.toml  shim-emails.toml.example  shim-notify.py  shim_config.yaml  shim_notify.py  shim_settings.toml  test_mail.py  test_read_emails.py
examples/attic/: shim-emails.toml  shim_config.toml
examples/data_plotting/: README.md  data_plotter_curator.py  simple_data_plotter_curator.py  simple_plotter.py
examples/tests/: test_shim.py
fw_gear_file_curator/: parser.py
mrrc/: Makefile  file-curator_project_bids.py
tests/: Dockerfile  curator.py  integration.py  test_integration.py  test_parser.py
