[tool.poetry]
name = "fw-gear-file-curator"
version = "0.4.0"
description = "Utility gear to curate input file based on curation script provided as input."
readme = "README.md"
authors = ["Flywheel <support@flywheel.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.2"
pandas = "^1.1.4"
nibabel = "^3.2.1"
Pillow = "^8.0.1"
piexif = "^1.1.3"
pydicom = "^2.1.1"
pypng = "^0.0.20"
flywheel-gear-toolkit = {extras = ["sdk"], version = "^0.6"}
flywheel-sdk = "16.14.2"
fw-file = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
ipython = "^8.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
