[tool.poetry]
name = "fw-gear-file-curator"
version = "0.4.0"
description = "Utility gear to curate input file based on curation script provided as input."
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.13"
lxml = "^4.6.2"
pandas = "^2"
nibabel = "^3.2.1"
Pillow = "^10"
piexif = "^1.1.3"
pydicom = "^2.1.1"
pypng = "^0.0.20"
flywheel-gear-toolkit = "^0.6"
flywheel-sdk = "^18"
fw-file = "^3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ipython = "^8.10.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
  --color=yes
  --durations=5
  --no-cov-on-fail
  --cov=fw_gear_file_curator
  --cov-report=term-missing
  --cov-report=xml:coverage.xml
  --junitxml=junit.xml
  -o=junit_family=xunit2
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
